# bowl_sdf_generator

./: .gitignore  README.md  make_bowl.py  sample_usage.sh
viewer/catkin_ws/src/gazebo_bringup/: CMakeLists.txt  package.xml
viewer/catkin_ws/src/gazebo_bringup/launch/: simple_sim.launch
viewer/catkin_ws/src/gazebo_bringup/worlds/: empty.world
