<?xml version="1.0"?>
<package format="2">
  <name>gazebo_bringup</name>
  <version>0.0.0</version>
  <description>The gazebo_bringup package</description>
  <maintainer email="watanabe@star.rcast.u-tokyo.ac.jp">watanabe</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
  </export>
</package>
